--- a/.env
+++ b/.env
@@ -10,9 +10,9 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=pwrtag_event
+DB_USERNAME=admin
+DB_PASSWORD=Pwrt@g2022
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
