--- a/.env
+++ b/.env
@@ -11,8 +11,8 @@ DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=pwrtag_event
-DB_USERNAME=admin
-DB_PASSWORD=Pwrt@g2022
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
